# databricks_snippets

./: .gitignore  Dockerfile  Makefile  app.py  pyproject.toml  scrape.py
